package edu.hitsz.aircraft;

import edu.hitsz.application.Main;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.EnemyBullet;
import edu.hitsz.bullet.HeroBullet;

import java.util.LinkedList;
import java.util.List;
import java.util.Random;

public class EliteEnemy extends AbstractEnemyAircraft {
    /**攻击方式 */

    /**
     * 子弹一次发射数量
     */
    private int shootNum = 1;

    /**
     * 子弹伤害
     */
    private int power = 30;

    /**
     * 子弹射击方向 (向上发射：1，向下发射：-1)
     */
    private int direction = 1;

    public EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }
    @Override
    public void forward() {
        super.forward();
        // 判定 y 轴向下飞行出界
        if (locationY >= Main.WINDOW_HEIGHT ) {
            vanish();
        }
    }
    @Override
    /**
     * 通过射击产生子弹
     * @return 射击出的子弹List
     */
    public List<BaseBullet> shoot() {
        List<BaseBullet> res = new LinkedList<>();
        int x = this.getLocationX();
        int y = this.getLocationY() + direction*2;
        int speedX = 0;
        int speedY = this.getSpeedY() + direction*5;
        BaseBullet bullet;
        for(int i=0; i<shootNum; i++){
            // 子弹发射位置相对飞机位置向前偏移
            // 多个子弹横向分散
            bullet = new EnemyBullet(x + (i*2 - shootNum + 1)*10, y, speedX, speedY, power);
            res.add(bullet);
        }
        return res;
    }
    @Override
    public void produceProperty(List<AbstractProperty> properties,int locationX, int locationY){
        PropertyFactory propertyFactory;
        Random r = new Random();
        float randomNumber = r.nextFloat();
        if (randomNumber <= 0.3) {
            propertyFactory = new BloodPropertyFactory();
            properties.add(propertyFactory.createProperty(locationX, locationY));
        } else if (randomNumber > 0.3 && randomNumber <= 0.6) {
            propertyFactory = new BulletPropertyFactory();
            properties.add(propertyFactory.createProperty(locationX, locationY));
        } else if (randomNumber > 0.6 && randomNumber <= 0.9) {
            propertyFactory = new BombPropertyFactory();
            properties.add(propertyFactory.createProperty(locationX, locationY));
        }
    }
}
